--- a/react-admin/public/index.html
+++ b/react-admin/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Dashboard React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -41,3 +41,14 @@
     -->
   </body>
 </html>
+<script>
+  // Responsive meta viewport optimization
+  if (window.innerWidth < 768) {
+    document
+      .querySelector('meta[name="viewport"]')
+      .setAttribute(
+        "content",
+        "width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes",
+      );
+  }
+</script>
